--- a/PersonalContactInformation.Library/PersonalContactInformation.Library.csproj
+++ b/PersonalContactInformation.Library/PersonalContactInformation.Library.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="CommunityToolkit.Maui" Version="5.3.0" />
+  </ItemGroup>
+
 </Project>
