--- a/Services/PersonalContactInformation.Api/PersonalContactInformation.Api.csproj
+++ b/Services/PersonalContactInformation.Api/PersonalContactInformation.Api.csproj
@@ -4,6 +4,8 @@
     <TargetFramework>net7.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <BaseIntermediateOutputPath>obj\</BaseIntermediateOutputPath>
+    <BaseOutputPath></BaseOutputPath>
   </PropertyGroup>
 
   <ItemGroup>
