--- a/Client/MauiBlazorApp/Platforms/Android/AndroidManifest.xml
+++ b/Client/MauiBlazorApp/Platforms/Android/AndroidManifest.xml
@@ -11,5 +11,5 @@
 	<uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 	<uses-permission android:name="android.permission.ACCESS_LOCATION_EXTRA_COMMANDS" />
 	<uses-permission android:name="android.permission.ACCESS_MEDIA_LOCATION" />
-	<uses-sdk />
+	<uses-sdk android:minSdkVersion="30" android:targetSdkVersion="31" />
 </manifest>
