--- a/Client/BlazorApp/BlazorApp.csproj
+++ b/Client/BlazorApp/BlazorApp.csproj
@@ -7,6 +7,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Blazorise" Version="1.3.1" />
+    <PackageReference Include="Blazorise.Bootstrap" Version="1.3.1" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.11" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\CommonCode\CommonCode.csproj" />
   </ItemGroup>
 
