--- a/Client/MauiBlazorApp/MauiBlazorApp.csproj
+++ b/Client/MauiBlazorApp/MauiBlazorApp.csproj
@@ -55,6 +55,7 @@
     <ItemGroup>
         <PackageReference Include="Blazorise" Version="1.3.1" />
         <PackageReference Include="Blazorise.Bootstrap" Version="1.3.1" />
+        <PackageReference Include="Blazorise.Icons.FontAwesome" Version="1.3.1" />
         <PackageReference Include="Microsoft.AspNetCore.Mvc.TagHelpers" Version="2.2.0" />
         <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.11" />
         <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.11">
@@ -79,12 +80,6 @@
 
     <ItemGroup>
       <ProjectReference Include="..\CommonCode\CommonCode.csproj" />
-    </ItemGroup>
-
-    <ItemGroup>
-      <MauiXaml Update="Pages\AndroidIndex.xaml">
-        <Generator>MSBuild:Compile</Generator>
-      </MauiXaml>
     </ItemGroup>
 
 </Project>
