--- a/Client/MauiBlazorApp/MauiBlazorApp.csproj
+++ b/Client/MauiBlazorApp/MauiBlazorApp.csproj
@@ -56,6 +56,8 @@
         <PackageReference Include="Blazorise" Version="1.3.1" />
         <PackageReference Include="Blazorise.Bootstrap" Version="1.3.1" />
         <PackageReference Include="Blazorise.Icons.FontAwesome" Version="1.3.1" />
+        <PackageReference Include="DinkToPdf" Version="1.0.8" />
+        <PackageReference Include="iTextSharp" Version="5.5.13.3" />
         <PackageReference Include="Microsoft.AspNetCore.Mvc.TagHelpers" Version="2.2.0" />
         <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.11" />
         <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.11">
@@ -76,6 +78,10 @@
 
     <ItemGroup>
       <Folder Include="Data\" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <None Include="wwwroot\exportPdf.js" />
     </ItemGroup>
 
     <ItemGroup>
