--- a/Client/BlazorApp/BlazorApp.csproj
+++ b/Client/BlazorApp/BlazorApp.csproj
@@ -7,13 +7,28 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Content Remove="wwwroot\exportPdf.js" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="wwwroot\exportPdf.js" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Blazorise" Version="1.3.1" />
     <PackageReference Include="Blazorise.Bootstrap" Version="1.3.1" />
+    <PackageReference Include="iTextSharp" Version="5.5.13.3" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.11" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\CommonCode\CommonCode.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Update="Pages\Index.razor">
+      <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
+    </Content>
   </ItemGroup>
 
 </Project>
