--- a/Client/BlazorApp/BlazorApp.csproj
+++ b/Client/BlazorApp/BlazorApp.csproj
@@ -17,6 +17,7 @@
   <ItemGroup>
     <PackageReference Include="Blazorise" Version="1.3.1" />
     <PackageReference Include="Blazorise.Bootstrap" Version="1.3.1" />
+    <PackageReference Include="CommunityToolkit.Maui" Version="5.3.0" />
     <PackageReference Include="iTextSharp" Version="5.5.13.3" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.11" />
   </ItemGroup>
