--- a/Client/BlazorApp/BlazorApp.csproj
+++ b/Client/BlazorApp/BlazorApp.csproj
@@ -18,8 +18,10 @@
     <PackageReference Include="Blazorise" Version="1.3.1" />
     <PackageReference Include="Blazorise.Bootstrap" Version="1.3.1" />
     <PackageReference Include="CommunityToolkit.Maui" Version="5.3.0" />
+    <PackageReference Include="CurrieTechnologies.Razor.SweetAlert2" Version="5.5.0" />
     <PackageReference Include="iTextSharp" Version="5.5.13.3" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.11" />
+    <PackageReference Include="Radzen.Blazor" Version="4.16.2" />
   </ItemGroup>
 
   <ItemGroup>
