--- a/Client/MauiBlazorApp/MauiBlazorApp.csproj
+++ b/Client/MauiBlazorApp/MauiBlazorApp.csproj
@@ -57,6 +57,7 @@
         <PackageReference Include="Blazorise.Bootstrap" Version="1.3.1" />
         <PackageReference Include="Blazorise.Icons.FontAwesome" Version="1.3.1" />
         <PackageReference Include="CommunityToolkit.Maui" Version="5.3.0" />
+        <PackageReference Include="CurrieTechnologies.Razor.SweetAlert2" Version="5.5.0" />
         <PackageReference Include="DinkToPdf" Version="1.0.8" />
         <PackageReference Include="iTextSharp" Version="5.5.13.3" />
         <PackageReference Include="Microsoft.AspNetCore.Mvc.TagHelpers" Version="2.2.0" />
@@ -74,6 +75,7 @@
         <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="7.0.0" />
         <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="7.0.1" />
         <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+        <PackageReference Include="Radzen.Blazor" Version="4.16.2" />
         <PackageReference Include="Xamarin.Essentials" Version="1.8.0" />
     </ItemGroup>
 
