--- a/Client/BlazorApp/appsettings.json
+++ b/Client/BlazorApp/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "FileStorage": "C:\\Users\\NoureldinElabyad\\Desktop\\StorgeTest",
+  "ConnectionStrings": {
+    "Default": "Data Source=NOURELDINE\\ADRESSQL;Initial Catalog=FileUploadDB;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False"
+  }
 }
