azure sql with table layout

--- a/Services/PersonalContactInformation.Api/appsettings.json
+++ b/Services/PersonalContactInformation.Api/appsettings.json
@@ -1,6 +1,8 @@
 {
   "ConnectionStrings": {
-    "DbConnection": "Server=.\\ADRESSQL; Database=PersonalContactInformation; Trusted_Connection=true; Trust Server Certificate = true;"
+    "DbConnection": "Server=sqldb-azubi-dev.database.windows.net;Database=AzubiDb;User ID=azubisql;Password=Azubi123;Trusted_Connection=False;Encrypt=True;Connection Timeout=30;"
+
+    //"DbConnection": "Server=.\\ADRESSQL; Database=PersonalContactInformation; Trusted_Connection=true; Trust Server Certificate = true;"
   },
   "Logging": {
     "LogLevel": {
