--- a/Client/MauiBlazorApp/MauiBlazorApp.csproj
+++ b/Client/MauiBlazorApp/MauiBlazorApp.csproj
@@ -53,6 +53,10 @@
     </ItemGroup>
 
     <ItemGroup>
+      <Content Remove="wwwroot\exportPdf.js" />
+    </ItemGroup>
+
+    <ItemGroup>
         <PackageReference Include="Blazorise" Version="1.3.1" />
         <PackageReference Include="Blazorise.Bootstrap" Version="1.3.1" />
         <PackageReference Include="Blazorise.Icons.FontAwesome" Version="1.3.1" />
