--- a/Client/MauiBlazorApp/MauiBlazorApp.csproj
+++ b/Client/MauiBlazorApp/MauiBlazorApp.csproj
@@ -95,4 +95,10 @@
       <ProjectReference Include="..\CommonCode\CommonCode.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Content Update="Pages\Index.razor">
+        <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
+      </Content>
+    </ItemGroup>
+
 </Project>
