--- a/Client/MauiBlazorApp/MauiBlazorApp.csproj
+++ b/Client/MauiBlazorApp/MauiBlazorApp.csproj
@@ -57,9 +57,6 @@
     </ItemGroup>
 
     <ItemGroup>
-        <PackageReference Include="Blazorise" Version="1.3.1" />
-        <PackageReference Include="Blazorise.Bootstrap" Version="1.3.1" />
-        <PackageReference Include="Blazorise.Icons.FontAwesome" Version="1.3.1" />
         <PackageReference Include="CommunityToolkit.Maui" Version="5.3.0" />
         <PackageReference Include="CurrieTechnologies.Razor.SweetAlert2" Version="5.5.0" />
         <PackageReference Include="DinkToPdf" Version="1.0.8" />
@@ -88,6 +85,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <None Include="..\.editorconfig" Link=".editorconfig" />
       <None Include="wwwroot\exportPdf.js" />
     </ItemGroup>
 
