--- a/Client/BlazorApp/BlazorApp.csproj
+++ b/Client/BlazorApp/BlazorApp.csproj
@@ -20,9 +20,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Blazored.Modal" Version="7.1.0" />
     <PackageReference Include="CommunityToolkit.Maui" Version="5.3.0" GeneratePathProperty="true" PrivateAssets="all" />
-    <PackageReference Include="CurrieTechnologies.Razor.SweetAlert2" Version="5.5.0" GeneratePathProperty="true" PrivateAssets="all"  />
-    <PackageReference Include="iTextSharp" Version="5.5.13.3" GeneratePathProperty="true" PrivateAssets="all"  />
+    <PackageReference Include="CurrieTechnologies.Razor.SweetAlert2" Version="5.5.0" GeneratePathProperty="true" PrivateAssets="all" />
+    <PackageReference Include="iTextSharp" Version="5.5.13.3" GeneratePathProperty="true" PrivateAssets="all" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.11" GeneratePathProperty="true" PrivateAssets="all" />
     <PackageReference Include="Radzen.Blazor" Version="4.16.2" GeneratePathProperty="true" PrivateAssets="all" />
   </ItemGroup>
