--- a/Client/MauiBlazorApp/MauiBlazorApp.csproj
+++ b/Client/MauiBlazorApp/MauiBlazorApp.csproj
@@ -57,6 +57,7 @@
     </ItemGroup>
 
     <ItemGroup>
+        <PackageReference Include="Blazored.Modal" Version="7.1.0" />
         <PackageReference Include="CommunityToolkit.Maui" Version="5.3.0" />
         <PackageReference Include="CurrieTechnologies.Razor.SweetAlert2" Version="5.5.0" />
         <PackageReference Include="DinkToPdf" Version="1.0.8" />
